syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu.tarcio";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.zup.edu.tarcio;

service KeyManagerRegistraService  {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeyManagerDeletaService {
  rpc deleta (DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

service KeyManagerCarregaService {
  rpc carrega(CarregaChavePixRequest) returns (CarregaChavePixResponse) {}
}

service KeyManagerListaService {
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

enum TipoDeConta {
  UNKNOWN_TIPO_DE_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CNPJ = 2 ;
  PHONE = 3;
  EMAIL = 4;
  RANDOM = 5;
}

message RegistraChavePixRequest {
  string clientId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message  RegistraChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}

// Deleta Chave
message DeletaChavePixRequest{
  string pixId = 1;
  string clientId = 2;
}

message DeletaChavePixResponse{
  string clientId = 1;
  string pixId = 2;
}

// Carrega
message CarregaChavePixRequest  {
  message FiltroPorPixId {
    string clientId = 1;
    string pixId = 2;
  }
  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message CarregaChavePixResponse  {
  message ChavePix {
    message ContaInfo {
      TipoDeConta tipo = 1;
      string instituicao = 2; /** ITAU UNIBANCO */
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoDeChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

// Lista
message ListaChavesPixRequest {
  string clientId = 1;
}

message ListaChavesPixResponse {

  message ChavePix {
    string pixId = 1;
    TipoDeChave tipo = 2;
    string chave = 3;
    TipoDeConta tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clientId = 1;
  repeated ChavePix chaves = 2;
}

message ErrorDetials{
  int32 code = 1;
  string message = 2;
}